2012-12-04  JJ Allaire <jj@rstudio.org>

        * src/Attributes.cpp: move generators into their own source file
        * src/AttributesGen.cpp: move generators into their own source file
        * src/AttributesGen.h: move generators into their own source file
        * src/AttributesParser.cpp: move generators into their own source file
        * src/AttributesParser.h: move generators into their own source file
        * src/AttributesTypes.h: new header for attributes types
        * src/AttributesUtil.h: new header for attributes utilities

2012-12-04 Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/hash/hash.h: new implementation of IndexHash, based on
	Simon's fastmatch package
        * include/Rcpp/sugar/functions/match.h: more efficient version of match
        using new IndexHash
        * include/Rcpp/sugar/functions/unique.h: more efficient version of 
        unique and in using IndexHash
        * include/Rcpp/sugar/functions/duplicated.h: more efficient version of 
        duplicated and in using IndexHash
        * include/Rcpp/sugar/functions/self_match.h: more efficient version of 
        self_match and in using IndexHash
        * include/Rcpp/vector/Vector.h: more efficiently create Vector from 
        sugar expression that are already vectors, i.e. grab the SEXP
        
2012-12-03  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/RcppCommon.h: Applied patch kindly contributed by Yan
	Zhou which provides a number of more refined definition for support
	of both the C++11 standard and different compilers
	* inst/include/Rcpp/internal/wrap.h: Idem
	* inst/include/Rcpp/sugar/sugar.h: Idem
	* inst/include/Rcpp/traits/comparator_type.h: Idem
	* inst/include/Rcpp/vector/Vector.h: Idem
	* inst/unitTests/runit.wrap.R: Idem
	* src/RcppCommon.cpp: Idem

	* DESCRIPTION: Increase minor dev. version once more

2012-12-03  JJ Allaire <jj@rstudio.org>

        * R/Attributes.R: added function to check whether R development